src/antlr4_gen/src/TwtlParser.py
# Generated from src/Twtl.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TwtlParser ( Parser ):

    grammarFileName = "Twtl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'&'", "'|'", "'!'", "'H'", "'*'", "'^'", 
                     "'['", "']'", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "NOT", "HOLD", "CONCAT", 
                      "CARET", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "COMMA", 
                      "TRUE", "FALSE", "INT", "PROP", "LINECMT", "WS" ]

    RULE_prog = 0
    RULE_formula = 1
    RULE_disjunction = 2
    RULE_conjunction = 3
    RULE_concatenation = 4
    RULE_temporal = 5
    RULE_negation = 6
    RULE_atom = 7

    ruleNames =  [ "prog", "formula", "disjunction", "conjunction", "concatenation", 
                   "temporal", "negation", "atom" ]

    EOF = Token.EOF
    AND=1
    OR=2
    NOT=3
    HOLD=4
    CONCAT=5
    CARET=6
    LBRACK=7
    RBRACK=8
    LPAREN=9
    RPAREN=10
    COMMA=11
    TRUE=12
    FALSE=13
    INT=14
    PROP=15
    LINECMT=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formula(self):
            return self.getTypedRuleContext(TwtlParser.FormulaContext,0)


        def EOF(self):
            return self.getToken(TwtlParser.EOF, 0)

        def getRuleIndex(self):
            return TwtlParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = TwtlParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.formula()
            self.state = 17
            self.match(TwtlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def disjunction(self):
            return self.getTypedRuleContext(TwtlParser.DisjunctionContext,0)


        def getRuleIndex(self):
            return TwtlParser.RULE_formula

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormula" ):
                return visitor.visitFormula(self)
            else:
                return visitor.visitChildren(self)




    def formula(self):

        localctx = TwtlParser.FormulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_formula)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.disjunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisjunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TwtlParser.ConjunctionContext)
            else:
                return self.getTypedRuleContext(TwtlParser.ConjunctionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(TwtlParser.OR)
            else:
                return self.getToken(TwtlParser.OR, i)

        def getRuleIndex(self):
            return TwtlParser.RULE_disjunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisjunction" ):
                return visitor.visitDisjunction(self)
            else:
                return visitor.visitChildren(self)




    def disjunction(self):

        localctx = TwtlParser.DisjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_disjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.conjunction()
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 22
                self.match(TwtlParser.OR)
                self.state = 23
                self.conjunction()
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConjunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def concatenation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TwtlParser.ConcatenationContext)
            else:
                return self.getTypedRuleContext(TwtlParser.ConcatenationContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(TwtlParser.AND)
            else:
                return self.getToken(TwtlParser.AND, i)

        def getRuleIndex(self):
            return TwtlParser.RULE_conjunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConjunction" ):
                return visitor.visitConjunction(self)
            else:
                return visitor.visitChildren(self)




    def conjunction(self):

        localctx = TwtlParser.ConjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.concatenation()
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 30
                self.match(TwtlParser.AND)
                self.state = 31
                self.concatenation()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConcatenationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def temporal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TwtlParser.TemporalContext)
            else:
                return self.getTypedRuleContext(TwtlParser.TemporalContext,i)


        def CONCAT(self, i:int=None):
            if i is None:
                return self.getTokens(TwtlParser.CONCAT)
            else:
                return self.getToken(TwtlParser.CONCAT, i)

        def getRuleIndex(self):
            return TwtlParser.RULE_concatenation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConcatenation" ):
                return visitor.visitConcatenation(self)
            else:
                return visitor.visitChildren(self)




    def concatenation(self):

        localctx = TwtlParser.ConcatenationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_concatenation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.temporal()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 38
                self.match(TwtlParser.CONCAT)
                self.state = 39
                self.temporal()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemporalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TwtlParser.RULE_temporal

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WithinExprContext(TemporalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TwtlParser.TemporalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(TwtlParser.LBRACK)
            else:
                return self.getToken(TwtlParser.LBRACK, i)
        def formula(self):
            return self.getTypedRuleContext(TwtlParser.FormulaContext,0)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(TwtlParser.RBRACK)
            else:
                return self.getToken(TwtlParser.RBRACK, i)
        def CARET(self):
            return self.getToken(TwtlParser.CARET, 0)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(TwtlParser.INT)
            else:
                return self.getToken(TwtlParser.INT, i)
        def COMMA(self):
            return self.getToken(TwtlParser.COMMA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithinExpr" ):
                return visitor.visitWithinExpr(self)
            else:
                return visitor.visitChildren(self)


    class HoldPropContext(TemporalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TwtlParser.TemporalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HOLD(self):
            return self.getToken(TwtlParser.HOLD, 0)
        def CARET(self):
            return self.getToken(TwtlParser.CARET, 0)
        def INT(self):
            return self.getToken(TwtlParser.INT, 0)
        def PROP(self):
            return self.getToken(TwtlParser.PROP, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHoldProp" ):
                return visitor.visitHoldProp(self)
            else:
                return visitor.visitChildren(self)


    class HoldNegPropContext(TemporalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TwtlParser.TemporalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HOLD(self):
            return self.getToken(TwtlParser.HOLD, 0)
        def CARET(self):
            return self.getToken(TwtlParser.CARET, 0)
        def INT(self):
            return self.getToken(TwtlParser.INT, 0)
        def NOT(self):
            return self.getToken(TwtlParser.NOT, 0)
        def PROP(self):
            return self.getToken(TwtlParser.PROP, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHoldNegProp" ):
                return visitor.visitHoldNegProp(self)
            else:
                return visitor.visitChildren(self)


    class HoldFalseContext(TemporalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TwtlParser.TemporalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HOLD(self):
            return self.getToken(TwtlParser.HOLD, 0)
        def CARET(self):
            return self.getToken(TwtlParser.CARET, 0)
        def INT(self):
            return self.getToken(TwtlParser.INT, 0)
        def FALSE(self):
            return self.getToken(TwtlParser.FALSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHoldFalse" ):
                return visitor.visitHoldFalse(self)
            else:
                return visitor.visitChildren(self)


    class TemporalNegationContext(TemporalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TwtlParser.TemporalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def negation(self):
            return self.getTypedRuleContext(TwtlParser.NegationContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemporalNegation" ):
                return visitor.visitTemporalNegation(self)
            else:
                return visitor.visitChildren(self)


    class HoldTrueContext(TemporalContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TwtlParser.TemporalContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def HOLD(self):
            return self.getToken(TwtlParser.HOLD, 0)
        def CARET(self):
            return self.getToken(TwtlParser.CARET, 0)
        def INT(self):
            return self.getToken(TwtlParser.INT, 0)
        def TRUE(self):
            return self.getToken(TwtlParser.TRUE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHoldTrue" ):
                return visitor.visitHoldTrue(self)
            else:
                return visitor.visitChildren(self)



    def temporal(self):

        localctx = TwtlParser.TemporalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_temporal)
        self._la = 0 # Token type
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = TwtlParser.HoldPropContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(TwtlParser.HOLD)
                self.state = 46
                self.match(TwtlParser.CARET)
                self.state = 47
                self.match(TwtlParser.INT)
                self.state = 48
                self.match(TwtlParser.PROP)
                pass

            elif la_ == 2:
                localctx = TwtlParser.HoldTrueContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(TwtlParser.HOLD)
                self.state = 50
                self.match(TwtlParser.CARET)
                self.state = 51
                self.match(TwtlParser.INT)
                self.state = 52
                self.match(TwtlParser.TRUE)
                pass

            elif la_ == 3:
                localctx = TwtlParser.HoldFalseContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.match(TwtlParser.HOLD)
                self.state = 54
                self.match(TwtlParser.CARET)
                self.state = 55
                self.match(TwtlParser.INT)
                self.state = 56
                self.match(TwtlParser.FALSE)
                pass

            elif la_ == 4:
                localctx = TwtlParser.HoldNegPropContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(TwtlParser.HOLD)
                self.state = 58
                self.match(TwtlParser.CARET)
                self.state = 59
                self.match(TwtlParser.INT)
                self.state = 60
                self.match(TwtlParser.NOT)
                self.state = 61
                self.match(TwtlParser.PROP)
                pass

            elif la_ == 5:
                localctx = TwtlParser.WithinExprContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 62
                self.match(TwtlParser.LBRACK)
                self.state = 63
                self.formula()
                self.state = 64
                self.match(TwtlParser.RBRACK)
                self.state = 65
                self.match(TwtlParser.CARET)
                self.state = 66
                self.match(TwtlParser.LBRACK)
                self.state = 67
                self.match(TwtlParser.INT)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 68
                    self.match(TwtlParser.COMMA)
                    self.state = 69
                    self.match(TwtlParser.INT)


                self.state = 72
                self.match(TwtlParser.RBRACK)
                pass

            elif la_ == 6:
                localctx = TwtlParser.TemporalNegationContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.negation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NegationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROP(self):
            return self.getToken(TwtlParser.PROP, 0)

        def NOT(self):
            return self.getToken(TwtlParser.NOT, 0)

        def TRUE(self):
            return self.getToken(TwtlParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(TwtlParser.FALSE, 0)

        def atom(self):
            return self.getTypedRuleContext(TwtlParser.AtomContext,0)


        def getRuleIndex(self):
            return TwtlParser.RULE_negation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)




    def negation(self):

        localctx = TwtlParser.NegationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_negation)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 77
                    self.match(TwtlParser.NOT)


                self.state = 80
                self.match(TwtlParser.PROP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(TwtlParser.TRUE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(TwtlParser.FALSE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 83
                    self.match(TwtlParser.NOT)


                self.state = 86
                self.atom()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(TwtlParser.LPAREN, 0)

        def formula(self):
            return self.getTypedRuleContext(TwtlParser.FormulaContext,0)


        def RPAREN(self):
            return self.getToken(TwtlParser.RPAREN, 0)

        def getRuleIndex(self):
            return TwtlParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = TwtlParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(TwtlParser.LPAREN)
            self.state = 90
            self.formula()
            self.state = 91
            self.match(TwtlParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





